feat: Add release draft on tag push

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,3 +50,15 @@ jobs:
           path: |
             build/Build/Products/Release/Hidden-Bar-arm64.zip
             build/Build/Products/Release/Hidden-Bar-arm64.dmg
+
+      - name: Create Release Draft
+        if: startsWith(github.ref, 'refs/tags/v')
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create "${{ github.ref_name }}" \
+            --draft \
+            --title "${{ github.ref_name }}" \
+            --generate-notes \
+            build/Build/Products/Release/Hidden-Bar-arm64.zip \
+            build/Build/Products/Release/Hidden-Bar-arm64.dmg
